--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1644,7 +1644,8 @@ body.bg-main.dark-mode {
   background-color: var(--i8-dark-bg-color) !important;
 }
 
-.dark-mode #header , .dark-mode .header-container {
+.dark-mode #header,
+.dark-mode .header-container {
   background-color: var(--i8-dark-fg-color) !important;
 }
 
@@ -1911,6 +1912,7 @@ footer .nav-item a:hover {
 }
 
 @media (max-width: 768px) {
+  
 
   .container,
   .container-md,
@@ -1920,7 +1922,10 @@ footer .nav-item a:hover {
 }
 
 @media (max-width: 576px) {
-
+  
+  .archive-thumb img {
+    height: 50vw !important;
+  }
   .container,
   .container-sm {
     max-width: 99% !important;
