--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -52,6 +52,8 @@
   padding: 0;
 }
 
+
+
 .f10 {
   font-size: 10px;
 }
@@ -81,24 +83,24 @@
 }
 
 .f17 {
-  font-size: 16px !important;
+  font-size: clamp(14px, 2vw, 17px) !important;
 }
 
 .f18 {
-  font-size: 18px;
+  font-size: clamp(15px, 2vw, 18px);
 }
 
 .f24 {
-  font-size: 24px;
+  font-size: clamp(20px, 2vw, 24px);
 }
 
 .f26 {
-  font-size: 26px;
+  font-size: clamp(22px, 2vw, 26px); 
   line-height: 150%;
 }
 
 .f28 {
-  font-size: 28px;
+  font-size: clamp(24px, 2vw, 28px);
 }
 
 .f31 {
