--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -53,6 +53,24 @@
 }
 
 
+.display-1{
+  font-size: clamp(29px, 2vw, 32px) !important;
+}
+.display-2{
+  font-size: clamp(22px, 2vw, 25px) !important;
+}
+.display-3{
+  font-size: clamp(18px, 2vw, 21px) !important;
+}
+.display-4{
+  font-size: clamp(15px, 2vw, 18px) !important;
+}
+.display-5{
+  font-size: clamp(13px, 2vw, 15px) !important;
+}
+.display-6{
+  font-size: clamp(11px, 2vw, 13px) !important;
+}
 
 .f10 {
   font-size: 10px;
