--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -153,6 +153,10 @@
   line-height: 180%;
 }
 
+.l3 {
+  line-height: 200%;
+}
+
 .fw-1 {
   font-weight: 100 !important;
   font-variation-settings: "wght" 100 !important;
