--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -1362,10 +1362,11 @@ table {
   border: 3px solid #f2f2f2;
   margin: 15px 0;
   caption-side: bottom;
+  margin: 25px 0;
 }
 
 th {
-  background-color: #007bff;
+  background-color: var(--i8-light-primary);
   color: white;
   padding: 8px;
   text-align: right;
@@ -1374,6 +1375,17 @@ th {
 td {
   border: 1px solid #d3d3d3;
   padding: 8px;
+}
+
+tr:hover {
+  background-color: var(--i8-light-primary) !important;
+  color: var(--i8-light-fg-color) !important;
+}
+
+table td {
+  font-size: medium;
+  text-align: right;
+  padding: 15px 8px;
 }
 
 tr:nth-child(even) {
