--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /* 
-Theme Name: قالب اختصاصی اندیشه
+Theme Name: قالب اختصاصی رصدی پلاس
 Theme URI: http://ihasht.ir/
 Author: ihasht.ir 
 Author URI: http://ihasht.ir/
-Description: این قالب به صورت اختصاصی برای سایت anishemoaser.ir طراحی شده است.
+Description: این قالب به صورت اختصاصی برای سایت rasdiplus.ir طراحی شده است.
 Version: 4.0.0
 Text Domain: i8-Anidshe
 */
